# SystemDNA

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
docs/: architecture.md  collectors.md  configuration.md  contributing.md  index.md  plugins.md  snapshot-schema.md
scripts/: install.sh
src/systemdna/: __main__.py  app.py
src/systemdna/cli/: config.py  dependencies.py  diff.py  doctor.py  export.py  history.py  info.py  plugins.py  score.py  snapshot.py  verify.py  version.py
src/systemdna/collectors/: base.py  configuration_collector.py  hardware_collector.py  network_collector.py  packages_collector.py  registry.py  runner.py  security_collector.py  services_collector.py  system_collector.py  users_collector.py
src/systemdna/core/: config.py  exceptions.py  logging.py
src/systemdna/diff/: engine.py
src/systemdna/doctor/: engine.py  registry.py  rules.py
src/systemdna/export/: engine.py
src/systemdna/history/: engine.py
src/systemdna/models/: __init__.py  configuration.py  diff.py  doctor.py  hardware.py  metadata.py  network.py  packages.py  security.py  services.py  snapshot.py  system.py  users.py
src/systemdna/platform/linux/: configuration.py  hardware.py  init_detect.py  network.py  packages.py  security.py  services.py  system.py  users.py
src/systemdna/plugins/: base.py  loader.py  manager.py
src/systemdna/schemas/: __init__.py  snapshot_schema.py
src/systemdna/scoring/: engine.py  models.py  rules.py
src/systemdna/snapshot/: engine.py
src/systemdna/storage/: manager.py
src/systemdna/utils/: hash.py  system.py  time.py
tests/: conftest.py  test_collectors.py  test_config.py  test_diff.py  test_doctor.py  test_export.py  test_history.py  test_models.py  test_plugins.py  test_schema.py  test_scoring.py  test_snapshot.py  test_storage.py  test_utils.py
