[build-system]
requires = ["setuptools>=75.0", "wheel>=0.45"]
build-backend = "setuptools.build_meta"

[project]
name = "systemdna"
version = "0.1.0"
description = "Capture your system's DNA. Understand every change."
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.13"
authors = [
    {name = "SystemDNA Contributors"},
]
keywords = [
    "system", "snapshot", "diff", "audit", "forensics",
    "configuration-management", "system-administration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",,
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "orjson>=3.10.0",
    "platformdirs>=4.3.0",
    "psutil>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/Fontailll/SystemDNA"
Repository = "https://github.com/Fontailll/SystemDNA"
Issues = "https://github.com/Fontailll/SystemDNA/issues"

[project.scripts]
systemdna = "systemdna.app:main"

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["systemdna*"]

[tool.setuptools.package-data]
"systemdna" = ["py.typed"]

[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP",
    "B", "SIM", "ARG", "PTH",
    "PLC", "PLE", "PLR", "PLW",
    "RUF",
]
ignore = ["UP017", "UP042"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/systemdna/diff/engine.py" = ["E501", "PLR0912"]
"src/systemdna/export/engine.py" = ["E501", "PLR0912", "PLR0915"]
"src/systemdna/doctor/rules.py" = ["E501", "PLR2004"]
"src/systemdna/schemas/snapshot_schema.py" = ["PLR0911"]
"src/systemdna/platform/linux/packages.py" = ["E501", "PLR2004"]
"src/systemdna/platform/linux/hardware.py" = ["PLR2004"]
"src/systemdna/platform/linux/network.py" = ["PLR2004"]
"src/systemdna/platform/linux/services.py" = ["PLR2004"]
"src/systemdna/platform/linux/system.py" = ["PLR2004"]
"src/systemdna/platform/linux/users.py" = ["PLR2004"]
"src/systemdna/cli/diff.py" = ["PLR2004"]
"src/systemdna/cli/history.py" = ["PLR2004", "E501"]
"src/systemdna/cli/export.py" = ["B008"]
"src/systemdna/cli/snapshot.py" = ["B008", "PLR0912", "PLR0915"]
"src/systemdna/diff/__init__.py" = ["F401"]
"src/systemdna/cli/score.py" = ["E501", "PLR2004"]
"src/systemdna/scoring/rules.py" = ["E501", "PLR2004"]

[tool.mypy]
strict = true
python_version = "3.13"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_unimported = true
disallow_subclassing_any = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
show_error_codes = true
exclude = ["tests/"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
